--- a/WingtipToys/Site.Master
+++ b/WingtipToys/Site.Master
@@ -46,7 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Ferox Devices</a>
+                    <a class="navbar-brand" runat="server" href="~/"><img src="Images/ferox-new.jpg" style="max-width:120px; max-height:33px; padding-top:0px; vertical-align:top;" /></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -56,11 +56,10 @@
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                         <li><a runat="server" href="~/ProductList">Products</a></li>
+                        <li><a runat="server" href="~/ShoppingCart" ID="cartCount">&nbsp;</a></li>
                         <li><asp:TextBox ID="txtSearchMaster" runat="server"></asp:TextBox>
                             <asp:Button ID="btnSearch" runat="server" Text="Search" OnClick="btnSearch_Click"/>
                         </li>
-                         
-                        <li><a runat="server" href="~/ShoppingCart" ID="cartCount">&nbsp;</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
@@ -80,12 +79,6 @@
                     </asp:LoginView>
                 </div>
             </div>
-        </div>
-        <div id="TitleContent" style="text-align: center">
-            <a runat="server" href="~/">
-                <asp:Image  ID="Image1" runat="server" ImageUrl="~/Images/logonew.png" BorderStyle="None" />
-            </a>  
-            <br />  
         </div>
         <div id="CategoryMenu" style="text-align: center">       
             <asp:ListView ID="categoryList"  
