--- a/WingtipToys/Site.Master
+++ b/WingtipToys/Site.Master
@@ -51,7 +51,9 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" id="adminLink" visible="false" 
-                          href="~/Admin/AdminPage">Admin</a></li>
+                          href="~/Admin/AdminPage.aspx">Admin</a></li>
+                        <li><a runat="server" id="branchLink" visible="false" 
+                          href="~/Branch/BranchPage.aspx">Branch</a></li>
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                         <li><a runat="server" href="~/ProductList">Products</a></li>
