--- a/WingtipToys/Site.Master
+++ b/WingtipToys/Site.Master
@@ -38,17 +38,13 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/"><img src="Images/ferox-new.jpg" style="max-width:120px; max-height:33px; padding-top:0px; vertical-align:top;" /></a>
+      
+                    <a class="navbar-brand" runat="server" href="~/"><img src="Images/ferox-new-1.jpg" style="max-width:130px; max-height:35px;" /></a>
                 </div>
-                <div class="navbar-collapse collapse">
+                <div class="navbar-collapse collapse" style="padding-bottom: 5px; padding-top: 5px;">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" id="adminLink" visible="false" 
                           href="~/Admin/AdminPage">Admin</a></li>
@@ -57,10 +53,11 @@
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                         <li><a runat="server" href="~/ProductList">Products</a></li>
                         <li><a runat="server" href="~/ShoppingCart" ID="cartCount">&nbsp;</a></li>
-                        <li><asp:TextBox ID="txtSearchMaster" runat="server"></asp:TextBox>
-                            <asp:Button ID="btnSearch" runat="server" Text="Search" OnClick="btnSearch_Click"/>
-                        </li>
                     </ul>
+                    <div class="navbar-form navbar-left" role="search">
+                        <asp:TextBox ID="txtSearchMaster" runat="server"></asp:TextBox>
+                            <asp:Button ID="btnSearch" runat="server" Text="Search" OnClick="btnSearch_Click"/>
+                  </div>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -80,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div id="CategoryMenu" style="text-align: center">       
+        <div id="CategoryMenu" style="text-align: center; padding-top:30px; padding-bottom:5px;">       
             <asp:ListView ID="categoryList"  
                 ItemType="WingtipToys.Models.Category" 
                 runat="server"
